# GithubGrabber

./: CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  GithubGrabber.cpp  mainFrame.cpp  mainFrame.h  mainFrame.xml
app/GetRepos/: CMakeLists.txt  main.cpp
app/GithubChecker/: CMakeLists.txt  GithubChecker.cpp  checkerMainFrame.xml  mainFrame.cpp  mainFrame.h  mainFrame.xml
app/GithubGrabber/: CMakeLists.txt  GithubGrabber.cpp  grabberMainFrame.xml  mainFrame.cpp  mainFrame.h
app/gitMerger/: CMakeLists.txt  gitMerger.cpp
grabber/: CMakeLists.txt  commonData.h  dataAnalysis.cpp  dataAnalysis.h  excelExecuter.cpp  excelExecuter.h  gitOperator.cpp  gitOperator.h  grabber.cpp  grabber.h  urlParser.cpp  urlParser.h
